<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/btn_save_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="string"
        android:text="@string/string_cache" />

    <Button
        android:id="@+id/btn_save_jsonobject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="jsonobject"
        android:text="@string/jsonobject_cache" />

    <Button
        android:id="@+id/btn_save_jsonarray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="jsonarray"
        android:text="@string/jsonarray_cache" />

    <Button
        android:id="@+id/btn_save_bitmap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="bitmap"
        android:text="@string/bitmap_cache" />

    <Button
        android:id="@+id/btn_save_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="media"
        android:text="@string/media_cache" />

    <Button
        android:id="@+id/btn_save_drawable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="drawable"
        android:text="@string/drawable_cache" />

    <Button
        android:id="@+id/btn_save_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="object"
        android:text="@string/object_cache" />


</LinearLayout>